--- a/css/style.css
+++ b/css/style.css
@@ -954,6 +954,11 @@ a:focus {
     color: #ffffff;
 }
 
+.banner .banner-text img {
+    width: 100%;
+    height: auto;
+}
+
 .banner .banner-text .btn {
     margin-top: 15px;
     color: #6200EE;
